updated email list item, fixed drawer z-index bug

--- a/src/styles/base/_colors.scss
+++ b/src/styles/base/_colors.scss
@@ -24,7 +24,11 @@ $color-email-list-item-unread-background: rgb(255, 255, 255);
 
 /// The background color of read email list items.
 /// @type {color}
-$color-email-list-item-read-background: rgb(224, 227, 232);
+$color-email-list-item-read-background: rgb(234, 237, 242);
+
+/// The background color of read email list items.
+/// @type {color}
+$color-email-list-item-read-color: rgb(85, 85, 85);
 
 /// The background color of the header.
 /// @type {color}
